Fix particle header overflow

--- a/styles/1_header.css
+++ b/styles/1_header.css
@@ -21,7 +21,7 @@
 #particles {
   position: absolute;
   top: 0;
-  width: 100%; height: 288px;
+  width: 100%; height: 258px;
   z-index: 2;
   overflow: hidden;
   pointer-events: none;
